modified:   Index.htm

--- a/Index.htm
+++ b/Index.htm
@@ -8,5 +8,7 @@
     <p> Este é um arquivo para estudos do GIT em html.
         Teste 123
         Woohoo.
+
+        <strong>Mais um teste que deve ser feito via git.
   </body>
 </html>
